--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.application.name=pitatoku
 server.port=8081
+
+# デバッグ設定
+logging.level.org.thymeleaf=DEBUG
+logging.level.org.springframework.web=DEBUG
+spring.thymeleaf.cache=false
+
+# MySQL接続設定
+spring.datasource.url=jdbc:mysql://localhost:3306/pitatoku
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
